@@ -7,103 +7,76 @@
         <label>Properties</label>
         <object class="wxPanel" name="pnlProperties">
           <object class="wxStaticText" name="stName">
-            
             <label>Name</label>
-            
             <pos>5,7d</pos>
           </object>
           <object class="wxTextCtrl" name="txtName">
-            
             <pos>70,5d</pos>
-            
             <size>135,-1d</size>
           </object>
           <object class="wxStaticText" name="stTablespace">
-            
             <label>Tablespace</label>
-            
             <pos>5,22d</pos>
           </object>
           <object class="wxComboBox" name="cbTablespace">
-            
             <content/>
-            
             <pos>70,20d</pos>
-            
             <size>135,12d</size>
-            
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stType">
-            
             <label>Access method</label>
-            
             <pos>5,37d</pos>
           </object>
           <object class="wxComboBox" name="cbType">
-            
             <content/>
-            
             <pos>70,35d</pos>
-            
             <size>135,12d</size>
-            
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
           <object class="wxStaticText" name="stUnique">
-            
             <label>Unique</label>
-            
             <pos>5,52d</pos>
           </object>
           <object class="wxCheckBox" name="chkUnique">
-            
             <label></label>
-            
             <pos>70,50d</pos>
-            
             <size>13,12d</size>
           </object>
           <object class="wxStaticText" name="stClustered">
-            
             <label>Clustered</label>
-            
             <pos>5,67d</pos>
           </object>
           <object class="wxCheckBox" name="chkClustered">
-            
             <label></label>
-            
             <pos>70,65d</pos>
-            
+            <size>13,12d</size>
+          </object>
+          <object class="wxStaticText" name="stConcurrently">
+            <label>Concurrent build?</label>
+            <pos>5,82d</pos>
+          </object>
+          <object class="wxCheckBox" name="chkConcurrent">
+            <label></label>
+            <pos>70,80d</pos>
             <size>13,12d</size>
           </object>
           <object class="wxStaticText" name="stWhere">
-            
             <label>Constraint</label>
-            
-            <pos>5,82d</pos>
+            <pos>5,97d</pos>
           </object>
           <object class="wxTextCtrl" name="txtWhere">
-            
-            <pos>70,80d</pos>
-            
-            <size>135,67d</size>
-            
+            <pos>70,95d</pos>
+            <size>135,52d</size>
             <style>wxTE_MULTILINE</style>
           </object>
           <object class="wxStaticText" name="stComment">
-            
             <label>Comment</label>
-            
             <pos>5,154d</pos>
           </object>
           <object class="wxTextCtrl" name="txtComment">
-            
             <pos>70,153d</pos>
-            
             <size>135,25d</size>
-            
             <style>wxTE_MULTILINE</style>
           </object>
           <object class="wxStaticText" name="stClusterSet">
@@ -117,7 +90,6 @@
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
         </object>
-        
         <selected>1</selected>
       </object>
       <pos>2,2d</pos>
@@ -131,16 +103,12 @@
             <growablerows>0</growablerows>
             <object class="sizeritem">
               <object class="wxListCtrl" name="lstColumns">
-                
                 <pos>5,5d</pos>
-                
                 <style>wxLC_REPORT|wxLC_SINGLE_SEL</style>
               </object>
-              
               <flag>wxGROW</flag>
             </object>
             <object class="spacer">
-              
               <size>3,3d</size>
             </object>
             <object class="sizeritem">
@@ -149,48 +117,35 @@
                 <growablecols>0</growablecols>
                 <object class="sizeritem">
                   <object class="wxComboBox" name="cbColumns">
-                    
                     <content/>
-                    
                     <pos>5,180d</pos>
-                    
                     <style>wxCB_READONLY|wxCB_DROPDOWN</style>
                   </object>
-                  
                   <flag>wxGROW|wxALIGN_CENTRE_VERTICAL</flag>
                 </object>
                 <object class="spacer">
-                  
                   <size>3,3d</size>
                 </object>
                 <object class="sizeritem">
                   <object class="wxButton" name="btnAddCol">
-                    
                     <label>Add</label>
-                    
                     <pos>100,180d</pos>
                   </object>
                 </object>
                 <object class="spacer">
-                  
                   <size>3,3d</size>
                 </object>
                 <object class="sizeritem">
                   <object class="wxButton" name="btnRemoveCol">
-                    
                     <label>Remove</label>
-                    
                     <pos>155,180d</pos>
-                    
                     <size>50,-1d</size>
                   </object>
                 </object>
               </object>
-              
               <flag>wxGROW</flag>
             </object>
             <object class="spacer">
-              
               <size>2,2d</size>
             </object>
           </object>
@@ -198,25 +153,17 @@
       </object>
     </object>
     <object class="wxButton" name="wxID_HELP">
-      
       <label>Help</label>
-      
       <pos>2,220d</pos>
-      
       <size>50,-1d</size>
     </object>
     <object class="wxButton" name="wxID_OK">
-      
       <label>OK</label>
-      
       <default>1</default>
-      
       <pos>113,220d</pos>
     </object>
     <object class="wxButton" name="wxID_CANCEL">
-      
       <label>Cancel</label>
-      
       <pos>166,220d</pos>
     </object>
     <size>218,238d</size>
