@@ -35,7 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2006-09-08 DP  1.6.0  Use SQL standard type names where appropriate. Show 
+2006-09-11 DP  1.6.0  Add support for building indexes concurrently on 8.2.
+2006-09-08 DP  1.6.0  Use SQL standard type names where appropriate. Show
                       them as 'aliases' in the browser. [Magnus Hagander/
                       Dave Page]
 2006-09-06 DP  1.6.0  The RULE privilege is not applicable to tables in 8.2
